bug-030167-Sidebar not visible in case of add new product or randomly

--- a/application/views/css/dashboard.css
+++ b/application/views/css/dashboard.css
@@ -35,6 +35,8 @@ Breadcrumb
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 166px 0px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px 0px 166px 0px rgba(0, 0, 0, 0.3);
+    height: 100%;
+    display: flex;
 }
 
 @-webkit-keyframes AnimationName {
